# OpenCMBL

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
opencmbl/: __main__.py
src/: __init__.py
