[metadata]
name = OpenCMBL-tpowell11
version = 0.0.1
author = Tom Powell
author_email = thomastruittpowell@gmail.com
description = Package to get data from LoggerPro .cmbl files
long_description = file: README.md
long_description_content_type = text/markdown
url =  https://github.com/tpowell11/OpenCMBL
project_urls = 
    Bug Tracker = https://github.com/tpowell11/OpenCMBL/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    = opencmbl
packages = find:
lxml = >=4.6.2

[options.packages.find]
where = opencmbl